# c-trace-fwd

./: .clang-format  .gitignore  .gitmodules  Makefile  README.txt  c-trace-fwd.nix  c-trace-fwd.spec  flake.nix  runsocat.sh
bib/: borm13.bib  niss22.bib  wiki25.bib
doc/: DESIGN
incl/: agency.h  c_trace_fwd.h  c_trace_fwd.h.bak  ctf_cbor_drv.h  ctf_cbor_drv_priv.h  ctf_util.h  datapoint.h  handshake.h  metrics.h  mpn.h  msg.h  proto_stk.h  queue.h  sdu.h  service.h  svc_enum.h  tof.h
scripts/: lsof.sh  node.sh  run-ctf.sh  run-empty_loop.sh  runsocat.sh  tracer.sh  tracerconfig-mainnet.sh.json
src/app/: main.c
src/conf/: conf.c
src/drv/: collection.c  ctf_cbor_drv.c  float.c  int.c  misc.c  string.c
src/ffi/: c_trace_fwd.rs
src/hs/: cabal.project  trace-compare.cabal
src/hs/app/: trace-compare.hs
src/hs/src/Trace/Forward/Test/: CCodec.hs
src/proto/: datapoint.c  handshake.c  metrics.c  sdu.c  stk.c  tof.c
src/service/: client.c  client.c.bak  queue.c  service.c  service.c.bak  thread.c  unix.c  unix.c.bak  ux.c
src/state/: state.c  state.c.bak
src/test/: cabal.project  handshake.py  sdu_cbor_dsc.c  sdu_dissect.c  sdu_reencode.c  tof.py  trace-compare.cabal
src/test/src/Trace/Forward/Test/: CCodec.hs
src/util/: agency.c  errno.c  flags.c  mpn.c  msg.c  sev.c
test/: cabal.project  cbor_dissect.c  cbor_try.c  codec-testing.hs  empty_loop.c  proto_stk.py  sdu.py  sdu_cbor_dsc.c  sdu_dissect.c  sdu_reencode.c  tof_stdin.c  trace-compare.cabal  trace-compare.hs
test/Trace/Forward/Test/: CCodec.hs
