cabal-version: 3.0

name:                   trace-compare
version:                0.3.2
synopsis:               A service for logging and monitoring over Cardano nodes
description:            A service for logging and monitoring over Cardano nodes.
category:               Cardano,
                        Trace,
copyright:              2025 Input Output Engineering Inc (IOE)
author:                 Nadia Chambers
maintainer:             nadia.chambers@iohk.io
build-type:             Simple

common project-config
  default-language:     GHC2021
  pkgconfig-depends:  , libblst
                      , libsodium
                      , libsecp256k1
  build-depends:        base >= 4.14 && < 5
  default-extensions: , ApplicativeDo
                      , BlockArguments
                      , DataKinds
                      , DeriveAnyClass
                      , DerivingStrategies
                      , GADTs
                      , LambdaCase
                      , OverloadedStrings
                      , PackageImports
                      , PartialTypeSignatures
                      , RecordWildCards
                      , TypeFamilies
                      , ViewPatterns
  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wno-orphans
                        -Wpartial-fields
                        -Wredundant-constraints
                        -fprint-potential-instances
                        -rtsopts=all
                        -threaded
                        -- The -N option says to spawn a number of kernel
                        -- threads proportional to the system's CPU count.
                        -with-rtsopts=-N

library
  import:               project-config
  hs-source-dirs:       src
  exposed-modules:      Trace.Forward.Test.CCodec
  build-depends:      , base
                      , bytestring
                      , cborg
                      , containers
                      , extra
                      , filepath
                      , network-mux
                      , ouroboros-network-framework < 0.17.0.0
                      , these
                      , time
                      , trace-dispatcher
                      , transformers
                      , typed-protocols

executable trace-compare
  import:               project-config
  hs-source-dirs:       app
  main-is:              trace-compare.hs
  build-depends:      , trace-compare
  -- The -T flag says to collect runtime statistics.
  -- It's added to RTS options already in project-config's ghc-options.
  ghc-options:          -with-rtsopts=-T

test-suite trace-compare-test
  import:               project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              trace-compare-test.hs
  build-depends:      , trace-compare

test-suite trace-compare-test-ext
  import:               project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              trace-compare-test-ext.hs
  build-depends:      , trace-compare

benchmark trace-compare-bench
  import:               project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       bench
  main-is:              trace-compare-bench.hs
  build-depends:      , trace-compare
