cabal-version: 3.0

name:                   trace-compare
version:                0.3.2
synopsis:               A service for logging and monitoring over Cardano nodes
description:            A service for logging and monitoring over Cardano nodes.
category:               Cardano,
                        Trace,
copyright:              2025 Input Output Engineering Inc (IOE)
author:                 Nadia Chambers
maintainer:             nadia.chambers@iohk.io
build-type:             Simple

common library-deps
  build-depends:      , base
                      , bytestring
                      , cborg
                      , containers
                      , extra
                      , filepath
                      , network-mux
                      , ouroboros-network-framework < 0.17.0.0
                      , these
                      , trace-dispatcher
                      , transformers
                      , typed-protocols

common project-config
  default-language:     GHC2021
  pkgconfig-depends:  , libblst
                      , libsodium
                      , libsecp256k1
  build-depends:        base >= 4.14 && < 5
  default-extensions: , ApplicativeDo
                      , BlockArguments
                      , DataKinds
                      , DeriveAnyClass
                      , DerivingStrategies
                      , GADTs
                      , LambdaCase
                      , OverloadedStrings
                      , PackageImports
                      , PartialTypeSignatures
                      , RecordWildCards
                      , TypeFamilies
                      , ViewPatterns
  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wno-orphans
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -fprint-potential-instances
                        -rtsopts=all
                        -threaded

common rts-opts
                        -- The -N option says to spawn a number of kernel
                        -- threads proportional to the system's CPU count.
  ghc-options:          -with-rtsopts=-N

library
  import:               library-deps, project-config
  hs-source-dirs:       .
  exposed-modules:      Trace.Forward.Test.CCodec

executable trace-compare
  import:               library-deps, project-config, rts-opts
  hs-source-dirs:       .
  main-is:              trace-compare.hs
  build-depends:      , trace-compare
  -- The -T flag says to collect runtime statistics.
  -- It's added to RTS options already in project-config's ghc-options.
  ghc-options:          -with-rtsopts=-T
  other-modules:        Trace.Forward.Test.CCodec

test-suite trace-compare-test
  import:               project-config, rts-opts
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       .
  main-is:              trace-compare-test.hs
  build-depends:      , trace-compare

test-suite trace-compare-test-ext
  import:               project-config, rts-opts
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       .
  main-is:              trace-compare-test-ext.hs
  build-depends:      , trace-compare

benchmark trace-compare-bench
  import:               project-config, rts-opts
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       .
  main-is:              trace-compare-bench.hs
  build-depends:      , trace-compare
